--- a/assrts/css/style.css
+++ b/assrts/css/style.css
@@ -22,7 +22,7 @@ header {
     position: relative;
     width: 100%;
     height: 100vh;
-    background: url(./img/Netflix_pg.jpg);
+    background: url(/assrts/img/Netflix_pg.jpg);
     box-shadow: inset 0 50px 300px #000, inset 0 -50px 300px #000;
     background-size: cover;
     background-position: center;
@@ -185,32 +185,6 @@ main {
     padding-bottom: 10px;
 }
 
-.card-section-title {
-    display: flex;
-    align-items: center;
-    margin-bottom: 10px;
-}
-
-.card-section-title-1 {
-    margin-right: 10px;
-}
-
-.card-section-title-1 {
-    padding: 10px 15px;
-    background-color: #101312;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 5px;
-}
-
-.card-section-title-2 {
-    padding: 10px 15px;
-    background-color: #101312;
-    color: #fff;
-    font-size: 18px;
-    border-radius: 5px;
-}
-
 .card-section-img {
     display: flex;
     align-items: center;
@@ -227,6 +201,7 @@ main {
 
 .card-section-img img {
     border-radius: 5px;
+    width: 230px;
 }
 
 /* Service */
